--- a/crds/grafana-operator/v5.21.0.grafana.integreatly.org_grafanaalertrulegroups.yaml
+++ b/crds/grafana-operator/v5.21.0.grafana.integreatly.org_grafanaalertrulegroups.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.17.3
+    controller-gen.kubebuilder.io/version: v0.19.0
   name: grafanaalertrulegroups.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
@@ -134,7 +134,6 @@ spec:
                   name will be used.
                 type: string
               resyncPeriod:
-                default: 10m0s
                 description: How often the resource is synced, defaults to 10m0s if
                   not set
                 pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
@@ -194,8 +193,7 @@ spec:
                       type: string
                     for:
                       default: 0s
-                      format: duration
-                      pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
+                      pattern: ^([0-9]+(\.[0-9]+)?(s|m|h|d|w))+$
                       type: string
                     isPaused:
                       type: boolean
