--- a/crds/grafana-operator/v5.21.0.grafana.integreatly.org_grafanalibrarypanels.yaml
+++ b/crds/grafana-operator/v5.21.0.grafana.integreatly.org_grafanalibrarypanels.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.17.3
+    controller-gen.kubebuilder.io/version: v0.19.0
   name: grafanalibrarypanels.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
@@ -312,8 +312,10 @@ spec:
                 items:
                   properties:
                     name:
+                      minLength: 1
                       type: string
                     version:
+                      pattern: ^((0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?|latest)$
                       type: string
                   required:
                   - name
@@ -321,7 +323,6 @@ spec:
                   type: object
                 type: array
               resyncPeriod:
-                default: 10m0s
                 description: How often the resource is synced, defaults to 10m0s if
                   not set
                 pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
