--- a/crds/grafana-operator/v5.21.0.grafana.integreatly.org_grafanamutetimings.yaml
+++ b/crds/grafana-operator/v5.21.0.grafana.integreatly.org_grafanamutetimings.yaml
@@ -3,23 +3,20 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.17.3
-  name: grafanadatasources.grafana.integreatly.org
+    controller-gen.kubebuilder.io/version: v0.19.0
+  name: grafanamutetimings.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
     categories:
     - grafana-operator
-    kind: GrafanaDatasource
-    listKind: GrafanaDatasourceList
-    plural: grafanadatasources
-    singular: grafanadatasource
+    kind: GrafanaMuteTiming
+    listKind: GrafanaMuteTimingList
+    plural: grafanamutetimings
+    singular: grafanamutetiming
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
-    - jsonPath: .status.NoMatchingInstances
-      name: No matching instances
-      type: boolean
     - format: date-time
       jsonPath: .status.lastResync
       name: Last resync
@@ -30,7 +27,7 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaDatasource is the Schema for the grafanadatasources API
+        description: GrafanaMuteTiming is the Schema for the GrafanaMuteTiming API
         properties:
           apiVersion:
             description: |-
@@ -50,51 +47,21 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaDatasourceSpec defines the desired state of GrafanaDatasource
+            description: GrafanaMuteTimingSpec defines the desired state of GrafanaMuteTiming
             properties:
               allowCrossNamespaceImport:
                 default: false
                 description: Allow the Operator to match this resource with Grafanas
                   outside the current namespace
                 type: boolean
-              datasource:
-                properties:
-                  access:
-                    type: string
-                  basicAuth:
-                    type: boolean
-                  basicAuthUser:
-                    type: string
-                  database:
-                    type: string
-                  editable:
-                    description: Whether to enable/disable editing of the datasource
-                      in Grafana UI
-                    type: boolean
-                  isDefault:
-                    type: boolean
-                  jsonData:
-                    type: object
-                    x-kubernetes-preserve-unknown-fields: true
-                  name:
-                    type: string
-                  orgId:
-                    description: Deprecated field, it has no effect
-                    format: int64
-                    type: integer
-                  secureJsonData:
-                    type: object
-                    x-kubernetes-preserve-unknown-fields: true
-                  type:
-                    type: string
-                  uid:
-                    description: Deprecated field, use spec.uid instead
-                    type: string
-                  url:
-                    type: string
-                  user:
-                    type: string
-                type: object
+              editable:
+                default: true
+                description: Whether to enable or disable editing of the mute timing
+                  in Grafana UI
+                type: boolean
+                x-kubernetes-validations:
+                - message: spec.editable is immutable
+                  rule: self == oldSelf
               instanceSelector:
                 description: Selects Grafana instances for import
                 properties:
@@ -144,21 +111,10 @@ spec:
                 x-kubernetes-validations:
                 - message: spec.instanceSelector is immutable
                   rule: self == oldSelf
-              plugins:
-                description: plugins
-                items:
-                  properties:
-                    name:
-                      type: string
-                    version:
-                      type: string
-                  required:
-                  - name
-                  - version
-                  type: object
-                type: array
+              name:
+                description: A unique name for the mute timing
+                type: string
               resyncPeriod:
-                default: 10m0s
                 description: How often the resource is synced, defaults to 10m0s if
                   not set
                 pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
@@ -167,102 +123,75 @@ spec:
                 description: Suspend pauses synchronizing attempts and tells the operator
                   to ignore changes
                 type: boolean
-              uid:
-                description: |-
-                  The UID, for the datasource, fallback to the deprecated spec.datasource.uid
-                  and metadata.uid. Can be any string consisting of alphanumeric characters,
-                  - and _ with a maximum length of 40 +optional
-                maxLength: 40
-                pattern: ^[a-zA-Z0-9-_]+$
-                type: string
-                x-kubernetes-validations:
-                - message: spec.uid is immutable
-                  rule: self == oldSelf
-              valuesFrom:
-                description: environments variables from secrets or config maps
+              time_intervals:
+                description: Time intervals for muting
                 items:
                   properties:
-                    targetPath:
+                    days_of_month:
+                      description: |-
+                        The date 1-31 of a month. Negative values can also be used to represent days that begin at the end of the month.
+                        For example: -1 for the last day of the month.
+                      items:
+                        type: string
+                      type: array
+                    location:
+                      description: Depending on the location, the time range is displayed
+                        in local time.
                       type: string
-                    valueFrom:
-                      properties:
-                        configMapKeyRef:
-                          description: Selects a key of a ConfigMap.
-                          properties:
-                            key:
-                              description: The key to select.
-                              type: string
-                            name:
-                              default: ""
-                              description: |-
-                                Name of the referent.
-                                This field is effectively required, but due to backwards compatibility is
-                                allowed to be empty. Instances of this type with an empty value here are
-                                almost certainly wrong.
-                                More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                              type: string
-                            optional:
-                              description: Specify whether the ConfigMap or its key
-                                must be defined
-                              type: boolean
-                          required:
-                          - key
-                          type: object
-                          x-kubernetes-map-type: atomic
-                        secretKeyRef:
-                          description: Selects a key of a Secret.
-                          properties:
-                            key:
-                              description: The key of the secret to select from.  Must
-                                be a valid secret key.
-                              type: string
-                            name:
-                              default: ""
-                              description: |-
-                                Name of the referent.
-                                This field is effectively required, but due to backwards compatibility is
-                                allowed to be empty. Instances of this type with an empty value here are
-                                almost certainly wrong.
-                                More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                              type: string
-                            optional:
-                              description: Specify whether the Secret or its key must
-                                be defined
-                              type: boolean
-                          required:
-                          - key
-                          type: object
-                          x-kubernetes-map-type: atomic
-                      type: object
-                      x-kubernetes-validations:
-                      - message: Either configMapKeyRef or secretKeyRef must be set
-                        rule: (has(self.configMapKeyRef) && !has(self.secretKeyRef))
-                          || (!has(self.configMapKeyRef) && has(self.secretKeyRef))
-                  required:
-                  - targetPath
-                  - valueFrom
+                    months:
+                      description: |-
+                        The months of the year in either numerical or the full calendar month.
+                        For example: 1, may.
+                      items:
+                        type: string
+                      type: array
+                    times:
+                      description: The time inclusive of the start and exclusive of
+                        the end time (in UTC if no location has been selected, otherwise
+                        local time).
+                      items:
+                        properties:
+                          end_time:
+                            description: end time
+                            type: string
+                          start_time:
+                            description: start time
+                            type: string
+                        required:
+                        - end_time
+                        - start_time
+                        type: object
+                      type: array
+                    weekdays:
+                      description: |-
+                        The day or range of days of the week.
+                        For example: monday, thursday
+                      items:
+                        type: string
+                      type: array
+                    years:
+                      description: |-
+                        The year or years for the interval.
+                        For example: 2021
+                      items:
+                        type: string
+                      type: array
                   type: object
-                maxItems: 99
+                minItems: 1
                 type: array
             required:
-            - datasource
             - instanceSelector
+            - name
+            - time_intervals
             type: object
             x-kubernetes-validations:
-            - message: spec.uid is immutable
-              rule: ((!has(oldSelf.uid) && !has(self.uid)) || (has(oldSelf.uid) &&
-                has(self.uid)))
             - message: disabling spec.allowCrossNamespaceImport requires a recreate
                 to ensure desired state
               rule: '!oldSelf.allowCrossNamespaceImport || (oldSelf.allowCrossNamespaceImport
                 && self.allowCrossNamespaceImport)'
           status:
-            description: GrafanaDatasourceStatus defines the observed state of GrafanaDatasource
+            description: The most recent observed state of a Grafana resource
             properties:
-              NoMatchingInstances:
-                description: The datasource instanceSelector can't find matching grafana
-                  instances
-                type: boolean
               conditions:
                 description: Results when synchonizing resource with Grafana instances
                 items:
@@ -320,17 +249,10 @@ spec:
                   - type
                   type: object
                 type: array
-              hash:
-                type: string
-              lastMessage:
-                description: 'Deprecated: Check status.conditions or operator logs'
-                type: string
               lastResync:
                 description: Last time the resource was synchronized with Grafana
                   instances
                 format: date-time
-                type: string
-              uid:
                 type: string
             type: object
         required:
