--- a/crds/grafana-operator/v5.21.0.grafana.integreatly.org_grafananotificationpolicies.yaml
+++ b/crds/grafana-operator/v5.21.0.grafana.integreatly.org_grafananotificationpolicies.yaml
@@ -3,17 +3,17 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.17.3
-  name: grafanamutetimings.grafana.integreatly.org
+    controller-gen.kubebuilder.io/version: v0.19.0
+  name: grafananotificationpolicies.grafana.integreatly.org
 spec:
   group: grafana.integreatly.org
   names:
     categories:
     - grafana-operator
-    kind: GrafanaMuteTiming
-    listKind: GrafanaMuteTimingList
-    plural: grafanamutetimings
-    singular: grafanamutetiming
+    kind: GrafanaNotificationPolicy
+    listKind: GrafanaNotificationPolicyList
+    plural: grafananotificationpolicies
+    singular: grafananotificationpolicy
   scope: Namespaced
   versions:
   - additionalPrinterColumns:
@@ -27,7 +27,8 @@ spec:
     name: v1beta1
     schema:
       openAPIV3Schema:
-        description: GrafanaMuteTiming is the Schema for the GrafanaMuteTiming API
+        description: GrafanaNotificationPolicy is the Schema for the GrafanaNotificationPolicy
+          API
         properties:
           apiVersion:
             description: |-
@@ -47,7 +48,8 @@ spec:
           metadata:
             type: object
           spec:
-            description: GrafanaMuteTimingSpec defines the desired state of GrafanaMuteTiming
+            description: GrafanaNotificationPolicySpec defines the desired state of
+              GrafanaNotificationPolicy
             properties:
               allowCrossNamespaceImport:
                 default: false
@@ -55,12 +57,11 @@ spec:
                   outside the current namespace
                 type: boolean
               editable:
-                default: true
-                description: Whether to enable or disable editing of the mute timing
-                  in Grafana UI
+                description: Whether to enable or disable editing of the notification
+                  policy in Grafana UI
                 type: boolean
                 x-kubernetes-validations:
-                - message: spec.editable is immutable
+                - message: Value is immutable
                   rule: self == oldSelf
               instanceSelector:
                 description: Selects Grafana instances for import
@@ -111,87 +112,157 @@ spec:
                 x-kubernetes-validations:
                 - message: spec.instanceSelector is immutable
                   rule: self == oldSelf
-              name:
-                description: A unique name for the mute timing
-                type: string
               resyncPeriod:
-                default: 10m0s
                 description: How often the resource is synced, defaults to 10m0s if
                   not set
                 pattern: ^([0-9]+(\.[0-9]+)?(ns|us|µs|ms|s|m|h))+$
                 type: string
+              route:
+                description: Routes for alerts to match against
+                properties:
+                  active_time_intervals:
+                    items:
+                      type: string
+                    type: array
+                  continue:
+                    description: continue
+                    type: boolean
+                  group_by:
+                    description: group by
+                    items:
+                      type: string
+                    type: array
+                  group_interval:
+                    description: group interval
+                    type: string
+                  group_wait:
+                    description: group wait
+                    type: string
+                  match_re:
+                    additionalProperties:
+                      type: string
+                    description: match re
+                    type: object
+                  matchers:
+                    description: matchers
+                    items:
+                      properties:
+                        isEqual:
+                          description: is equal
+                          type: boolean
+                        isRegex:
+                          description: is regex
+                          type: boolean
+                        name:
+                          description: name
+                          type: string
+                        value:
+                          description: value
+                          type: string
+                      required:
+                      - isRegex
+                      - value
+                      type: object
+                    type: array
+                  mute_time_intervals:
+                    description: mute time intervals
+                    items:
+                      type: string
+                    type: array
+                  object_matchers:
+                    description: object matchers
+                    items:
+                      description: |-
+                        ObjectMatcher ObjectMatcher is a matcher that can be used to filter alerts.
+
+                        swagger:model ObjectMatcher
+                      items:
+                        type: string
+                      type: array
+                    type: array
+                  provenance:
+                    description: provenance
+                    type: string
+                  receiver:
+                    description: receiver
+                    minLength: 1
+                    type: string
+                  repeat_interval:
+                    description: repeat interval
+                    type: string
+                  routeSelector:
+                    description: |-
+                      selects GrafanaNotificationPolicyRoutes to merge in when specified
+                      mutually exclusive with Routes
+                    properties:
+                      matchExpressions:
+                        description: matchExpressions is a list of label selector
+                          requirements. The requirements are ANDed.
+                        items:
+                          description: |-
+                            A label selector requirement is a selector that contains values, a key, and an operator that
+                            relates the key and values.
+                          properties:
+                            key:
+                              description: key is the label key that the selector
+                                applies to.
+                              type: string
+                            operator:
+                              description: |-
+                                operator represents a key's relationship to a set of values.
+                                Valid operators are In, NotIn, Exists and DoesNotExist.
+                              type: string
+                            values:
+                              description: |-
+                                values is an array of string values. If the operator is In or NotIn,
+                                the values array must be non-empty. If the operator is Exists or DoesNotExist,
+                                the values array must be empty. This array is replaced during a strategic
+                                merge patch.
+                              items:
+                                type: string
+                              type: array
+                              x-kubernetes-list-type: atomic
+                          required:
+                          - key
+                          - operator
+                          type: object
+                        type: array
+                        x-kubernetes-list-type: atomic
+                      matchLabels:
+                        additionalProperties:
+                          type: string
+                        description: |-
+                          matchLabels is a map of {key,value} pairs. A single {key,value} in the matchLabels
+                          map is equivalent to an element of matchExpressions, whose key field is "key", the
+                          operator is "In", and the values array contains only "value". The requirements are ANDed.
+                        type: object
+                    type: object
+                    x-kubernetes-map-type: atomic
+                  routes:
+                    description: routes, mutually exclusive with RouteSelector
+                    x-kubernetes-preserve-unknown-fields: true
+                required:
+                - receiver
+                type: object
               suspend:
                 description: Suspend pauses synchronizing attempts and tells the operator
                   to ignore changes
                 type: boolean
-              time_intervals:
-                description: Time intervals for muting
-                items:
-                  properties:
-                    days_of_month:
-                      description: |-
-                        The date 1-31 of a month. Negative values can also be used to represent days that begin at the end of the month.
-                        For example: -1 for the last day of the month.
-                      items:
-                        type: string
-                      type: array
-                    location:
-                      description: Depending on the location, the time range is displayed
-                        in local time.
-                      type: string
-                    months:
-                      description: |-
-                        The months of the year in either numerical or the full calendar month.
-                        For example: 1, may.
-                      items:
-                        type: string
-                      type: array
-                    times:
-                      description: The time inclusive of the start and exclusive of
-                        the end time (in UTC if no location has been selected, otherwise
-                        local time).
-                      items:
-                        properties:
-                          end_time:
-                            description: end time
-                            type: string
-                          start_time:
-                            description: start time
-                            type: string
-                        required:
-                        - end_time
-                        - start_time
-                        type: object
-                      type: array
-                    weekdays:
-                      description: |-
-                        The day or range of days of the week.
-                        For example: monday, thursday
-                      items:
-                        type: string
-                      type: array
-                    years:
-                      description: |-
-                        The year or years for the interval.
-                        For example: 2021
-                      items:
-                        type: string
-                      type: array
-                  type: object
-                minItems: 1
-                type: array
             required:
             - instanceSelector
-            - name
-            - time_intervals
+            - route
             type: object
             x-kubernetes-validations:
+            - message: spec.editable is immutable
+              rule: ((!has(oldSelf.editable) && !has(self.editable)) || (has(oldSelf.editable)
+                && has(self.editable)))
             - message: disabling spec.allowCrossNamespaceImport requires a recreate
                 to ensure desired state
               rule: '!oldSelf.allowCrossNamespaceImport || (oldSelf.allowCrossNamespaceImport
                 && self.allowCrossNamespaceImport)'
           status:
-            description: The most recent observed state of a Grafana resource
+            description: GrafanaNotificationPolicyStatus defines the observed state
+              of GrafanaNotificationPolicy
             properties:
               conditions:
                 description: Results when synchonizing resource with Grafana instances
@@ -249,6 +320,10 @@ spec:
                   - status
                   - type
                   type: object
+                type: array
+              discoveredRoutes:
+                items:
+                  type: string
                 type: array
               lastResync:
                 description: Last time the resource was synchronized with Grafana
